# Banking_Widgets

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: transactions_excel.xlsx
logs/: mylog.txt
src/: external_api.py  mask.py  processing.py  utils.py  widget.py
tests/: conftest.py  mask_test_data.py  test_decorators.py  test_external_api.py  test_generators.py  test_mask.py  test_processing.py  test_utils.py  test_widget.py
