[tool.poetry]
name = "banking-widgets"
version = "0.1.0"
description = ""
authors = ["Ramazan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.4"
xlrd = "^2.0.1"
pandas = "2.1.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.10.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"
types-requests = "^2.32.0.20240602"
pandas-stubs = "^2.2.2.240603"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.black]
line-length = 119
exclude = '.venv'

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
